--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -16,15 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/circleImageView"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_centerHorizontal="true"
-                android:elevation="9dp"
-                android:src="@drawable/sample_user_icon"
-                app:civ_border_color="@color/colorAccent"
-                app:civ_border_width="3dp" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -52,7 +43,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="50"
-                            android:background="@color/colorAccent"
+                            android:background="@color/black"
                             android:paddingBottom="12dp"
                             android:paddingTop="12dp"
                             android:text="Logg inn"
@@ -72,7 +63,7 @@
                             android:paddingTop="12dp"
                             android:text="Registrer deg"
                             android:textAlignment="center"
-                            android:textColor="@color/colorAccent"
+                            android:textColor="@color/black"
                             android:textSize="16dp"
                             android:textStyle="bold"
                             android:gravity="center_horizontal" />
@@ -127,13 +118,13 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:drawablePadding="16dp"
-                                android:drawableStart="@drawable/ic_lock_light_blue_24dp"
+                                android:drawableStart="@color/cardview_light_background"
                                 android:hint="Passord"
                                 android:inputType="textPassword"
                                 android:maxLines="1"
                                 android:textColor="@android:color/black"
                                 android:textSize="16sp"
-                                android:drawableLeft="@drawable/ic_lock_light_blue_24dp" />
+                                android:drawableLeft="@color/cardview_light_background" />
                         </com.google.android.material.textfield.TextInputLayout>
 
                         <Button
@@ -144,8 +135,8 @@
                             android:layout_marginBottom="16dp"
                             android:layout_marginTop="24dp"
                             android:background="@drawable/buttonshape"
-                            android:drawableLeft="@drawable/ic_touch_app_white_24dp"
-                            android:drawableStart="@drawable/ic_touch_app_white_24dp"
+                            android:drawableLeft="@color/white"
+                            android:drawableStart="@color/white"
                             android:paddingLeft="16dp"
                             android:paddingRight="16dp"
                             android:text="Logg inn"
