--- a/itguysappv2/app/src/main/res/values/colors.xml
+++ b/itguysappv2/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
+    <!--<color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_700">#FF018786</color>-->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name ="farge1">#09184D</color>
+    <color name ="farge2">#7B5BF2</color>
+    <color name ="farge3">#2F2E2E</color>
+    <color name ="farge4">#808085</color>
+    <color name ="farge5">#EDF2FA</color>
 </resources>
